KUBERNETES/_/busybox-log.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-log
  namespace: default
  labels:
    logMe: KUBELOG_BASELOG
spec:
  containers:
  - image: busybox
    command:
      - sh
      - -c
      - "while true; do    echo TEST LOG;    sleep 5; done"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
