KUBERNETES/_/grafanaService.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-system
spec:
  ports:
  - port: 80
    name: http
  - port: 3000
    name: grafana
  clusterIP: None
  selector:
    k8s-app: grafana
