KUBERNETES/_/kubeapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-api-proxy
  namespace: kube-system
spec:
  ports:
  - port: 443
    name: https
  clusterIP: None
  selector:
    name: kube-proxy
