KUBERNETES/_/kubeproxy-svc0.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  namespace: kube-system
spec:
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  clusterIP: None
  selector:
    name: kube-apiserver-kube-master
