KUBERNETES/_/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: foo
  annotations:
    kubernetes.io/ingress.class: nginx
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    # - host: www.example.com
    - http:
        paths:
          - path: /
            backend:
              serviceName: exampleService
              servicePort: 80

  tls:
    # With this configuration kube-lego will generate a secret in namespace foo called `example-tls`
    # for the URL `www.example.com`
    - hosts:
        - "www.example.com"
      secretName: example-tls
